# LocalMind

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/localmind/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/example/localmind/: LlamaBridge.kt  MainActivity.kt
app/src/main/java/com/example/localmind/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/example/localmind/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
